# pokemon-battle-system-tdd

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: simple_battle_sequence.py
src/attacksys/: action.py
src/battlesys/: action.py  definitions.py
tests/: test_attacks.py  test_attacksys.py
