[tool.poetry]
name = "attacksys"
version = "0.1.0"
description = "An example development of the attack system from the Pokémon game series using TDD as a design workframe."
authors = ["João Vitor Gutkoski Paes <joaovitorgpaes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ipython = "^8.11.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
